# sfmd

./: Cargo.toml  README.md
examples/: example.rs
src/: define.rs  flash.rs  lib.rs  serial_interface.rs  sfdp.rs
