[package]
name = "sfmd-rs"
version = "0.1.0"
edition = "2024"
authors = ["ThinkCode <thinkcodestudio@qq.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "An using JEDEC's SFDP standard serial (SPI) flash universal driver library"
keywords = ["spi", "flash"]
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4.27"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32f4xx-hal = { version = "0.22.1", features = ["stm32f429"] }
rtt-target = "0.6.1"
log = "0.4.27"
panic-rtt-target = "0.2.0"

[features]
default = []
spi = []
qspi = []
ospi = []

[profile.dev]
codegen-units = 1 # better optimizations
test = false # no need to run tests in dev mode

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


[[example]]
name = "example"